fixed the alignment issues.

--- a/src/app/stickerbook/stickerbook.component.scss
+++ b/src/app/stickerbook/stickerbook.component.scss
@@ -1,53 +1,3 @@
-.main-content-sec {
-    display: flex;
-    height: 100vh;
-}
-
-.left-side-sec {
-    flex: 0 0 auto;
-    width: auto;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-}
-
-.left-side-sec ul {
-    padding: 15px 20px 20px !important;
-    margin-top: 0;
-
-}
-
-.left-side-sec ul li {
-    list-style-type: none;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
-
-ul li .icon-text {
-    margin-top: 10px;
-}
-
-ul li i {
-    color: #ffffff;
-    background: #9ba0a5;
-    border: 1px solid #9ba0a5 !important;
-    width: 50px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 50px;
-    border-radius: 50%;
-    font-size: 30px;
-    cursor: pointer;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-ul li i:hover {
-    color: #9ba0a5;
-    background: #ffffff;
-}
 
 .right-side-sec {
     flex: 1 0 0%;
@@ -204,9 +154,16 @@ ul li i:hover {
             top: 55px;
             left: 75%;
         }
-        
 
   }
   .p-relative {
       position: relative;
+  }
+  
+  .sticker-tutorial {
+    text-align: center;
+    width: 78%;
+    margin: auto;
+    line-height: 2;
+    font-size: 20px;  
   }
