--- a/src/app/stories/stories.component.scss
+++ b/src/app/stories/stories.component.scss
@@ -1,130 +1,22 @@
-.main-content-sec {
-    display: flex;
-    height: 100vh;
-}
-
-.left-side-sec {
-    flex: 0 0 auto;
-    width: auto;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-}
-
-.left-side-sec ul {
-    padding: 15px 20px 20px !important;
-    margin-top: 0;
-
-}
-
-.left-side-sec ul li {
-    list-style-type: none;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
-
-ul li .icon-text {
-    margin-top: 10px;
-}
-
-ul li i {
-    color: #ffffff;
-    background: #9ba0a5;
-    border: 1px solid #9ba0a5 !important;
-    width: 50px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 50px;
-    border-radius: 50%;
-    font-size: 30px;
-    cursor: pointer;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-ul li i:hover {
-    color: #9ba0a5;
-    background: #ffffff;
-}
-
 .right-side-sec {
-    flex: 1 0 0%;
-    padding: 25px;
-
-    h1,
-    h3 {
-        font-weight: 600 !important;
+    .storybox {
+        border: solid;
+        height: 250px;
+        width: 90%;
+        font-size: 25px;
+        border-radius: 5px;
+        padding: 12px;
+        overflow: auto;
+        margin-top: 5%;
     }
-
-    h1 {
-        font-size: 40px !important;
-        margin-bottom: 0 !important;
-    }
-
-}
-
-.card-sec .card-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70px;
-    width: 350px;
-    font-weight: 600;
-    font-size: 25px;
-    background: #e0e0e0;
-    border-radius: 3px;
-    margin: 0 auto;
-    cursor: pointer;
-
-    &:hover {
-        background: #afb2b6;
-    }
-
-}
-
-.game-btn {
-    display: flex;
-    justify-content: center;
-    margin: 12px;
-
-    button {
-        border: 1px solid #737373;
-        padding: 10px 20px;
-        border-radius: 3px;
-        background-color: #737373;
-        color: #ffffff;
-        // font-size: 15px;
-        font-weight: 600;
-        border: none;
-        cursor: pointer;
-
-        &:hover {
-            background-color: #737373;
-        }
+    
+    b {
+        background: #D0D0D0;
+        border-radius: 14px;
+        padding: 5px;
+        font-size: 25px;
     }
 }
-
 #storyHight {
     font-size: 20px;
 }
-
-.storybox {
-    border: solid;
-    height: 250px;
-    width: 90%;
-    font-size: 30px;
-    border-radius: 5px;
-    padding: 12px;
-    overflow: auto;
-    margin-top: 5%;
-}
-
-b {
-    background: #D0D0D0;
-    border-radius: 14px;
-    padding: 5px;
-    font-size: 25px;
-}
-
